Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "4                          2.93    735.0  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "177                          1.60    560.0  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "RangeIndex(start=0, stop=178, step=1)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,8 +751,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -773,7 +775,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +802,7 @@
        "(178, 13)"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +867,7 @@
        "Name: 3, dtype: float64"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +994,7 @@
        "7                          3.58   1295.0  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1542,7 @@
        "[178 rows x 4 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1760,7 @@
        "Name: magnesium, Length: 178, dtype: float64"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1797,7 @@
        "Name: magnesium, dtype: float64"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2283,119 +2285,115 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>color_intensity</th>\n",
+       "      <th>magnesium</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>3.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>3.80</td>\n",
+       "      <td>101.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>77</th>\n",
        "      <td>2.65</td>\n",
+       "      <td>112.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>84</th>\n",
        "      <td>3.05</td>\n",
+       "      <td>94.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
        "      <td>2.60</td>\n",
+       "      <td>88.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>88</th>\n",
        "      <td>2.80</td>\n",
+       "      <td>84.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94</th>\n",
        "      <td>3.25</td>\n",
+       "      <td>98.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>2.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>2.06</td>\n",
+       "      <td>134.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>109</th>\n",
        "      <td>2.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>2.90</td>\n",
+       "      <td>94.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>112</th>\n",
        "      <td>3.80</td>\n",
+       "      <td>103.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>113</th>\n",
        "      <td>3.08</td>\n",
+       "      <td>88.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>115</th>\n",
        "      <td>1.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>1.95</td>\n",
+       "      <td>85.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>120</th>\n",
        "      <td>3.25</td>\n",
+       "      <td>96.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>121</th>\n",
        "      <td>6.00</td>\n",
+       "      <td>119.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>124</th>\n",
        "      <td>2.80</td>\n",
+       "      <td>82.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>127</th>\n",
        "      <td>3.00</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     color_intensity\n",
-       "74              3.21\n",
-       "75              3.80\n",
-       "77              2.65\n",
-       "84              3.05\n",
-       "87              2.60\n",
-       "88              2.80\n",
-       "94              3.25\n",
-       "96              2.50\n",
-       "103             2.06\n",
-       "109             2.65\n",
-       "110             2.90\n",
-       "112             3.80\n",
-       "113             3.08\n",
-       "115             1.90\n",
-       "116             1.95\n",
-       "120             3.25\n",
-       "121             6.00\n",
-       "124             2.80\n",
-       "127             3.00"
+       "     color_intensity  magnesium\n",
+       "74              3.21      101.0\n",
+       "77              2.65      112.0\n",
+       "84              3.05       94.0\n",
+       "87              2.60       88.0\n",
+       "88              2.80       84.0\n",
+       "94              3.25       98.0\n",
+       "96              2.50      134.0\n",
+       "109             2.65       94.0\n",
+       "112             3.80      103.0\n",
+       "113             3.08       88.0\n",
+       "115             1.90       85.0\n",
+       "120             3.25       96.0\n",
+       "121             6.00      119.0\n",
+       "124             2.80       82.0\n",
+       "127             3.00       92.0"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df[\"alcohol\"]<12, [\"color_intensity\"]]"
+    "df.loc[(df[\"alcohol\"]<12)  & (df[\"ash\"]> 2)  , [\"color_intensity\", \"magnesium\"]]"
    ]
   },
   {
@@ -2414,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2424,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2433,7 +2431,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2458,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2468,7 @@
        "Name: color_intensity, dtype: float64"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2509,7 @@
        "Name: color_intensity, dtype: float64"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2607,7 +2605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
